# Umbra

./: .gitmodules  BUILDING.md  CMakeLists.txt  README.md  REUSE.toml  zone.xiv.umbra.appdata.xml  zone.xiv.umbra.desktop  zone.xiv.umbra.yml
.github/workflows/: main.yml
autotests/: CMakeLists.txt  accountmanagertest.cpp  utilitytest.cpp
launcher/: CMakeLists.txt  accountconfig.kcfg  config.kcfg  profileconfig.kcfg
launcher/include/: account.h  accountmanager.h  assetupdater.h  blowfish.h  configsys.h  encryptedarg.h  gamepatcher.h  gamerunner.h  launchercore.h  patcher.h  profile.h  squareenixlogin.h  utility.h
launcher/src/: account.cpp  accountmanager.cpp  assetupdater.cpp  blowfish.cpp  configsys.cpp  encryptedarg.cpp  gamepatcher.cpp  gamerunner.cpp  launchercore.cpp  logger.cpp  main.cpp  patcher.cpp  processlogger.cpp  profile.cpp  profilemanager.cpp  squareenixlogin.cpp  utility.cpp
launcher/ui/: Main.qml
launcher/ui/Pages/: AutoLoginPage.qml  LoginPage.qml  MainPage.qml  StatusPage.qml
launcher/ui/Settings/: AboutPage.qml  AccountSettings.qml  AccountsPage.qml  DeveloperSettings.qml  GeneralSettings.qml  ProfileSettings.qml  ProfilesPage.qml  SettingsPage.qml  TroubleshootingPage.qml
launcher/ui/Setup/: AccountSetup.qml  AddSquareEnix.qml  SetupPage.qml
scripts/: build-flatpak-for-repo.sh  build-flatpak.sh  copy-repo-to-server.sh  tarball.sh
